--- a/Accueil.xaml
+++ b/Accueil.xaml
@@ -9,8 +9,8 @@
       Title="Accueil">
 
     <Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="59,66,0,0" TextWrapping="Wrap" Text="Bienvenue dans ce site de location de jeux vidéo" VerticalAlignment="Top" FontSize="36" Width="526"/>
-        <Image Source="/accueil.png" HorizontalAlignment="Left" Height="135" Margin="537,46,0,0" VerticalAlignment="Top" Width="172"/>
+        <TextBlock HorizontalAlignment="Left" Margin="11,66,0,0" TextWrapping="Wrap" Text="Bienvenue à vous dans ce site de location de jeux vidéo" VerticalAlignment="Top" FontSize="36" Width="526"/>
+        <Image Source="/accueil.png" HorizontalAlignment="Left" Height="135" Margin="576,46,0,0" VerticalAlignment="Top" Width="172"/>
 
     </Grid>
 </Page>
