--- a/Connection.xaml
+++ b/Connection.xaml
@@ -6,16 +6,22 @@
       xmlns:local="clr-namespace:Localtion_JV"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Connection">
+      Title="Connection" Background="White"> 
 
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="82,49,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" FontWeight="Bold"><Run Language="de-de" Text="Connection au compte :"/></TextBlock>
         <TextBlock HorizontalAlignment="Left" Margin="100,128,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold"><Run Language="de-de" Text="Nom d'utilisateur :"/></TextBlock>
         <TextBlock HorizontalAlignment="Left" Margin="98,168,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold"><Run Text="Mot de passe"/><Run Language="de-de" Text=" "/><Run Text=":"/></TextBlock>
         <TextBox HorizontalAlignment="Left" Margin="280,126,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" x:Name="nomTextBox"/>
-        <PasswordBox HorizontalAlignment="Left" Margin="278,166,0,0" VerticalAlignment="Top" Width="120" x:Name="mdpTextBox"/>
-        <Button Content="Connexion" HorizontalAlignment="Left" Margin="108,253,0,0" VerticalAlignment="Top" Height="27" Width="78" Click="Button_Click"/>
-        <Button Content="Nettoyer" HorizontalAlignment="Left" Margin="289,253,0,0" VerticalAlignment="Top" Height="27" Width="78" Click="Button_Click_1"/>
+        <PasswordBox HorizontalAlignment="Left" Margin="280,166,0,0" VerticalAlignment="Top" Width="120" x:Name="mdpTextBox"/>
+        <Button Content="Connexion" HorizontalAlignment="Left" Margin="108,281,0,0" VerticalAlignment="Top" Height="27" Width="78" Click="Button_Click"/>
+        <Button Content="Nettoyer" HorizontalAlignment="Left" Margin="289,281,0,0" VerticalAlignment="Top" Height="27" Width="78" Click="Button_Click_1"/>
+        <ComboBox Name="ConnexionChoice" HorizontalAlignment="Left" VerticalAlignment="Top" Width="118" Margin="289,238,0,0" Height="26" FontSize="12" RenderTransformOrigin="0.5,0.5">
+            <ComboBoxItem IsSelected="True">Membre</ComboBoxItem>
+            <ComboBoxItem>Responsable</ComboBoxItem>
+        </ComboBox>
+        <TextBlock HorizontalAlignment="Left" Margin="98,245,0,0" TextWrapping="Wrap" Text="Se connecter en tant que :" VerticalAlignment="Top" Width="182" FontWeight="Bold" RenderTransformOrigin="0.5,0.5"/>
+
 
 
     </Grid>
