--- a/Details.xaml
+++ b/Details.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Localtion_JV"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Details">
+      Title="Details" Background="White">
 
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="Concernant notre site : " VerticalAlignment="Top" FontSize="24"/>
