--- a/pages/admin/AccueilAdmin.xaml
+++ b/pages/admin/AccueilAdmin.xaml
@@ -6,9 +6,10 @@
       xmlns:local="clr-namespace:Localtion_JV.pages.admin"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AccueilAdmin">
+      Title="AccueilAdmin" Background="White">
 
     <Grid>
-        
+        <Label Content="Bienvenue Admin" HorizontalAlignment="Center" Margin="0,167,0,0" VerticalAlignment="Top" FontSize="36"/>
+
     </Grid>
 </Page>
