--- a/pages/customer/AccueilCustomer.xaml
+++ b/pages/customer/AccueilCustomer.xaml
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Localtion_JV.pages.customer"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="AccueilCustomer">
+      Title="AccueilCustomer" Background="White">
 
     <Grid>
         <TextBlock HorizontalAlignment="Center" Margin="0,94,0,0" TextWrapping="Wrap" Text="Bienvenue cher client" VerticalAlignment="Top" FontSize="36"/>
