--- a/Inscription.xaml
+++ b/Inscription.xaml
@@ -11,14 +11,14 @@
     <Grid>
         <TextBlock HorizontalAlignment="Left" Margin="82,49,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontSize="20" FontWeight="Bold"><Run Language="de-de" Text="Inscription :"/></TextBlock>
         <TextBlock HorizontalAlignment="Left" Margin="84,90,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold"><Run Language="de-de" Text="Nom d'utilisateur :"/></TextBlock>
-        <TextBlock HorizontalAlignment="Left" Margin="84,139,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold"><Run Text="T"/><Run Text="éléphone"/><Run Language="de-de" Text=" "/><Run Text=":"/></TextBlock>
+        <TextBlock HorizontalAlignment="Left" Margin="438,85,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold" Text="Date de naissance :"></TextBlock>
         <TextBlock HorizontalAlignment="Left" Margin="84,189,0,0" TextWrapping="Wrap" VerticalAlignment="Top" FontWeight="Bold"><Run Text="Mot de passe"/><Run Language="de-de" Text=" "/><Run Text=":"/></TextBlock>
         <TextBox x:Name="tb_username" HorizontalAlignment="Left" Margin="264,88,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <TextBox x:Name="tb_tel" HorizontalAlignment="Left" Margin="264,139,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <TextBox x:Name="tb_mdp" HorizontalAlignment="Left" Margin="264,187,0,0" VerticalAlignment="Top" Width="120"/>
         <Button Content="Enregistrer" HorizontalAlignment="Left" Margin="84,236,0,0" VerticalAlignment="Top" Height="27" Width="78" Click="Button_Click_2"/>
         <Button Content="Nettoyer" HorizontalAlignment="Left" Margin="265,236,0,0" VerticalAlignment="Top" Height="27" Width="78" Click="Button_Click_1"/>
         <Button Content="J'ai déjà un compte" HorizontalAlignment="Left" Margin="84,293,0,0" Height="27" VerticalAlignment="Top" Width="259" Click="Button_Click"/>
+        <Calendar x:Name="calendar_dob" HorizontalAlignment="Left" Margin="583,85,0,0" VerticalAlignment="Top"/>
 
 
     </Grid>
