--- a/pages/customer/Profile.xaml
+++ b/pages/customer/Profile.xaml
@@ -10,21 +10,24 @@
 
     <Grid>
         <Label Content="Profile : " HorizontalAlignment="Left" Margin="66,67,0,0" VerticalAlignment="Top" FontSize="36"/>
-        <Label Content="Nombre de crédits restants :" HorizontalAlignment="Left" Margin="56,150,0,0" VerticalAlignment="Top"/>
-        <Label Content="Jeux en cours de location :" HorizontalAlignment="Left" Margin="56,181,0,0" VerticalAlignment="Top"/>
-        <DataGrid Height="200" Margin="55,225,445,25" Width="300">
+        <Label Content="Nombre de crédits restants :" HorizontalAlignment="Left" Margin="25,150,0,0" VerticalAlignment="Top"/>
+        <Label Content="Jeux en cours de location :" HorizontalAlignment="Left" Margin="25,181,0,0" VerticalAlignment="Top"/>
+        <DataGrid Height="200" Margin="25,225,385,25" x:Name="dg1">
             <DataGrid.Columns>
-            <DataGridTextColumn IsReadOnly="True" Binding="{Binding Name}" Header="Nom"/>
-            <DataGridTextColumn IsReadOnly="True" Binding="{Binding Console}" Header="Console"/>
-            <DataGridTextColumn IsReadOnly="True" Binding="{Binding EndPoint}" Header="Date de retour"/>
+                <DataGridTextColumn IsReadOnly="True" Binding="{Binding Name}" Header="Nom"  Width="*"/>
+                <DataGridTextColumn IsReadOnly="True" Binding="{Binding Console}" Header="Console" Width="*"/>
+                <DataGridTextColumn IsReadOnly="True" Binding="{Binding StartPoint}" Header="Date de début" Width="*"/>
+                <DataGridTextColumn IsReadOnly="True" Binding="{Binding EndPoint}" Header="Date de retour" Width="*"/>
             </DataGrid.Columns>
         </DataGrid>
-        <DataGrid Height="200" Margin="429,225,166,25">
+        <DataGrid Height="200" Margin="437,225,10,25" x:Name="dg2">
             <DataGrid.Columns>
                 <DataGridTextColumn IsReadOnly="True" Binding="{Binding Name}" Header="Nom" Width="*"/>
                 <DataGridTextColumn IsReadOnly="True" Binding="{Binding Console}" Header="Console" Width="*"/>
+                <DataGridTextColumn IsReadOnly="True" Binding="{Binding BookingDate}" Header="Date reservation" Width="*"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Label Content="Jeux en cours de reservation :" HorizontalAlignment="Left" Margin="421,181,0,0" VerticalAlignment="Top"/>
+        <Label Content="Jeux en cours de reservation :" HorizontalAlignment="Left" Margin="437,181,0,0" VerticalAlignment="Top"/>
+        <TextBlock x:Name="tb_credits" HorizontalAlignment="Left" Margin="220,155,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top"/>
     </Grid>
 </Page>
