--- a/pages/customer/AccueilCustomer.xaml
+++ b/pages/customer/AccueilCustomer.xaml
@@ -10,6 +10,7 @@
 
     <Grid>
         <TextBlock HorizontalAlignment="Center" Margin="0,94,0,0" TextWrapping="Wrap" Text="Bienvenue cher client" VerticalAlignment="Top" FontSize="36"/>
+        <Label Content="" x:Name="label_accueil" HorizontalAlignment="Left" Margin="390,183,0,0" VerticalAlignment="Top" FontSize="24"/>
 
     </Grid>
 </Page>
