--- a/pages/customer/AddGame.xaml
+++ b/pages/customer/AddGame.xaml
@@ -13,8 +13,17 @@
         <Label Content="Nom du jeu :" HorizontalAlignment="Left" Margin="81,115,0,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF0034FF"/>
         <Label Content="Console du jeu :" HorizontalAlignment="Left" Margin="81,173,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.757,0.294" FontSize="16" Foreground="#FF0034FF"/>
         <TextBox x:Name="tb_name" HorizontalAlignment="Left" Margin="380,119,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="198" FontSize="16"/>
-        <TextBox x:Name="tb_console" HorizontalAlignment="Left" Margin="380,177,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="198" FontSize="16"/>
-        <Button Content="Soumettre" HorizontalAlignment="Left" Margin="132,300,0,0" VerticalAlignment="Top" FontSize="16" Width="96" Height="35" Foreground="#FFF7F7F7" BorderBrush="#FF0034FF" Background="#FF0019FF" Click="Button_Click"/>
+        <Button Content="Soumettre" HorizontalAlignment="Left" Margin="81,269,0,0" VerticalAlignment="Top" FontSize="16" Width="96" Height="35" Foreground="#FFF7F7F7" BorderBrush="#FF0034FF" Background="#FF0019FF" Click="Button_Click"/>
+        <ComboBox Name="consoleChoice" HorizontalAlignment="Left" Margin="380,173,0,0" VerticalAlignment="Top" Width="198" Height="31">
+            <ComboBoxItem>PS3</ComboBoxItem>
+            <ComboBoxItem>PS4</ComboBoxItem>
+            <ComboBoxItem>PS5</ComboBoxItem>
+            <ComboBoxItem>X360</ComboBoxItem>
+            <ComboBoxItem>ONE</ComboBoxItem>
+            <ComboBoxItem>WiiU</ComboBoxItem>
+            <ComboBoxItem>Switch</ComboBoxItem>
+            <ComboBoxItem>PC</ComboBoxItem>
+        </ComboBox>
 
     </Grid>
 </Page>
