--- a/pages/customer/Reservation.xaml
+++ b/pages/customer/Reservation.xaml
@@ -6,9 +6,12 @@
       xmlns:local="clr-namespace:Localtion_JV.pages.customer"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Reservation">
+      Title="Reservation" Background="White">
 
     <Grid>
-        
+        <Label Content="Reservation de jeu" HorizontalAlignment="Left" Margin="55,34,0,0" VerticalAlignment="Top" FontSize="36"/>
+        <Calendar HorizontalAlignment="Left" Margin="503,0,0,0" VerticalAlignment="Center"/>
+        <Button Content="Valider" HorizontalAlignment="Left" Margin="162,343,0,0" VerticalAlignment="Top" Height="25" Width="69" Click="Button_Click"/>
+
     </Grid>
 </Page>
