--- a/pages/admin/AddSubmittedGame.xaml
+++ b/pages/admin/AddSubmittedGame.xaml
@@ -9,12 +9,18 @@
       Title="AddSubmittedGame" Background="White">
 
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="283*"/>
+            <ColumnDefinition Width="117*"/>
+        </Grid.ColumnDefinitions>
         <Label Content="Ajouter un jeu proposé par un client" HorizontalAlignment="Left" Margin="47,46,0,0" VerticalAlignment="Top" FontSize="24" Foreground="#FF0027F3"/>
         <Label Content="Jeu proposé :" HorizontalAlignment="Left" Margin="47,134,0,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF0027F3"/>
-        <ComboBox x:Name="cb_name" HorizontalAlignment="Left" Margin="243,134,0,0" VerticalAlignment="Top" Width="120"/>
+        <ComboBox x:Name="cb_name" Margin="243,134,203,0" VerticalAlignment="Top" SelectionChanged="cb_name_SelectionChanged"/>
         <Label Content="Nombre de crédits :" HorizontalAlignment="Left" Margin="47,183,0,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF0027F3"/>
         <TextBox FontSize="16" x:Name="tb_credits" HorizontalAlignment="Left" Margin="243,190,0,0" TextWrapping="Wrap"  VerticalAlignment="Top" Width="120"/>
         <Button Content="Ajouter" HorizontalAlignment="Left" Margin="102,306,0,0" VerticalAlignment="Top" Height="28" Width="69" Foreground="White" BorderBrush="#FF0029FB" Background="#FF000DFF" Click="Button_Click"/>
+        <ComboBox x:Name="cbx" HorizontalAlignment="Left" Margin="490,129,0,0" VerticalAlignment="Top" Width="120" Grid.ColumnSpan="2"/>
+        <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="542,199,0,0" VerticalAlignment="Top" Grid.ColumnSpan="2"/>
 
     </Grid>
 </Page>
