--- a/WindowAdmin.xaml
+++ b/WindowAdmin.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Localtion_JV"
         mc:Ignorable="d"
-        Title="WindowAdmin" Height="450" Width="800" Background="Gray">
+        Title="WindowAdmin" Height="450" Width="800" Background="DarkBlue">
     <Grid>
         <Frame x:Name="Main" Margin="0,49,0,0"/>
         <Button Content="Liste des jeux" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Height="34" Width="120" Click="Button_Click"/>
