--- a/WindowClient.xaml
+++ b/WindowClient.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Localtion_JV"
         mc:Ignorable="d"
-        Title="WindowClient" Height="450" Width="800" Background="Gray">
+        Title="WindowClient" Height="450" Width="800" Background="DarkBlue">
     <Grid>
         <Frame x:Name="Main" Margin="0,49,0,0"/>
         <Button Content="Profile" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Height="34" Width="85" Click="Button_Click"/>
