--- a/pages/admin/DeleteGame.xaml
+++ b/pages/admin/DeleteGame.xaml
@@ -13,5 +13,6 @@
         <Label Content="Jeu à retirer : " HorizontalAlignment="Left" Margin="38,192,0,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF000DFF" Width="125"/>
         <ComboBox x:Name="cb_name" HorizontalAlignment="Left" Margin="224,192,0,0" VerticalAlignment="Top" Width="120"/>
         <Button Content="Confirmer" HorizontalAlignment="Left" Margin="38,291,0,0" VerticalAlignment="Top" Foreground="White" FontSize="16" Width="94" Background="#FF000CED" Click="Button_Click"/>
+        <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="500,150,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Page>
