--- a/pages/admin/ListAllowedGames.xaml
+++ b/pages/admin/ListAllowedGames.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Localtion_JV.pages.admin.ListAllGames"
+﻿<Page x:Class="Localtion_JV.pages.admin.ListAllowedGames"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Localtion_JV.pages.admin"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="ListAllGames" Background="White">
+      Title="ListAllowedGames" Background="White">
 
     <Grid>
         <DataGrid AutoGenerateColumns="False" x:Name="dg" Margin="50,68,51,44" Background="White">
