--- a/WindowClient.xaml
+++ b/WindowClient.xaml
@@ -10,8 +10,7 @@
         <Frame x:Name="Main" Margin="0,49,0,0"/>
         <Button Content="Profile" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Height="34" Width="85" Click="Button_Click"/>
         <Button Content="Liste des jeux" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Height="34" Width="85" Click="Button_Click_1"/>
-        <Button Content="Reservation" HorizontalAlignment="Left" Margin="220,10,0,0" VerticalAlignment="Top" Height="34" Width="85" Click="Button_Click_2"/>
-        <Button Content="Location" HorizontalAlignment="Left" Margin="320,10,0,0" VerticalAlignment="Top" Height="34" Width="85" Click="Button_Click_3"/>
+        <Button Content="Location" HorizontalAlignment="Left" Margin="220,10,0,0" VerticalAlignment="Top" Height="34" Width="85" Click="Button_Click_3" RenderTransformOrigin="-0.482,0.706"/>
         <Button Content="Deconnexion" HorizontalAlignment="Left" Margin="680,10,0,0" VerticalAlignment="Top" Height="34" Width="85" Click="Button_Click_4"/>
     </Grid>
 </Window>
