Correction bugs avec les datetime
Correction des bugs liés aux datetimes dans la partie inscription et dans la reservation.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -13,6 +13,6 @@
             <Button Content="Connection" MinWidth="100" Margin="4" Click="BtnConnection" Background="White" Foreground="Blue"/>
             <Button Content="Informations" MinWidth="100" Margin="4" Click="BtnDetails" Background="White" Foreground="Blue"/>
         </StackPanel>
-        <Frame x:Name="Main" Margin="0,35,0,0"/>
+        <Frame NavigationUIVisibility="Hidden" x:Name="Main" Margin="0,35,0,0"/>
     </Grid>
 </Window>
