--- a/Inscription.xaml
+++ b/Inscription.xaml
@@ -18,7 +18,7 @@
         <Button Content="Enregistrer" HorizontalAlignment="Left" Margin="84,199,0,0" VerticalAlignment="Top" Height="27" Width="78" Click="Button_Click_2"/>
         <Button Content="Nettoyer" HorizontalAlignment="Left" Margin="265,199,0,0" VerticalAlignment="Top" Height="27" Width="78" Click="Button_Click_1"/>
         <Button Content="J'ai déjà un compte" HorizontalAlignment="Left" Margin="84,256,0,0" Height="27" VerticalAlignment="Top" Width="259" Click="Button_Click"/>
-        <Calendar x:Name="calendar_dob" HorizontalAlignment="Left" Margin="583,85,0,0" VerticalAlignment="Top"/>
+        <DatePicker x:Name="calendar_dob" HorizontalAlignment="Left" Margin="444,147,0,0" VerticalAlignment="Top"/>
 
 
     </Grid>
