--- a/WindowClient.xaml
+++ b/WindowClient.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="WindowClient" Height="450" Width="800" Background="DarkBlue">
     <Grid>
-        <Frame x:Name="Main" Margin="0,49,0,0"/>
+        <Frame x:Name="Main" Margin="0,49,0,0" NavigationUIVisibility="Hidden"/>
         <Button Content="Profile" HorizontalAlignment="Left" Margin="20,10,0,0" VerticalAlignment="Top" Height="34" Width="85" Click="Button_Click"/>
         <Button Content="Liste des jeux" HorizontalAlignment="Left" Margin="120,10,0,0" VerticalAlignment="Top" Height="34" Width="85" Click="Button_Click_1"/>
         <Button Content="Location" HorizontalAlignment="Left" Margin="220,10,0,0" VerticalAlignment="Top" Height="34" Width="85" Click="Button_Click_3" RenderTransformOrigin="-0.482,0.706"/>
