--- a/pages/customer/Reservation.xaml
+++ b/pages/customer/Reservation.xaml
@@ -10,7 +10,6 @@
 
     <Grid>
         <Label Content="Reservation de jeu" HorizontalAlignment="Left" Margin="55,34,0,0" VerticalAlignment="Top" FontSize="36"/>
-        <Calendar x:Name="calendar_date" HorizontalAlignment="Left" Margin="503,0,0,0" VerticalAlignment="Center"/>
         <Button Content="Valider" HorizontalAlignment="Left" Margin="108,267,0,0" VerticalAlignment="Top" Height="25" Width="69" Click="Button_Click"/>
         <TextBlock HorizontalAlignment="Left" Margin="108,140,0,0" TextWrapping="Wrap" Text="Jeu désiré :" VerticalAlignment="Top"/>
         <TextBlock HorizontalAlignment="Left" Margin="108,180,0,0" TextWrapping="Wrap" Text="Console :" VerticalAlignment="Top"/>
@@ -18,7 +17,8 @@
         <Label x:Name="label1" Content="Label" HorizontalAlignment="Left" Margin="231,135,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label2" Content="Label" HorizontalAlignment="Left" Margin="231,175,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label3" Content="Label" HorizontalAlignment="Left" Margin="231,215,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.155,0.384"/>
-        <Label Content="Date de début désirée :" HorizontalAlignment="Left" Margin="503,74,0,0" VerticalAlignment="Top"/>
+        <Label Content="Date de début désirée :" HorizontalAlignment="Left" Margin="400,96,0,0" VerticalAlignment="Top"/>
+        <DatePicker x:Name="calendar_ld" HorizontalAlignment="Left" Margin="400,140,0,0" VerticalAlignment="Top"/>
 
     </Grid>
 </Page>
