--- a/pages/customer/Reservation.xaml
+++ b/pages/customer/Reservation.xaml
@@ -2,6 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+      xmlns:sys="clr-namespace:System;assembly=mscorlib"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:Localtion_JV.pages.customer"
       mc:Ignorable="d" 
@@ -18,7 +19,13 @@
         <Label x:Name="label2" Content="Label" HorizontalAlignment="Left" Margin="231,175,0,0" VerticalAlignment="Top"/>
         <Label x:Name="label3" Content="Label" HorizontalAlignment="Left" Margin="231,215,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.155,0.384"/>
         <Label Content="Date de début désirée :" HorizontalAlignment="Left" Margin="400,96,0,0" VerticalAlignment="Top"/>
-        <DatePicker x:Name="calendar_ld" HorizontalAlignment="Left" Margin="400,140,0,0" VerticalAlignment="Top"/>
+        <DatePicker DisplayDateStart="{x:Static sys:DateTime.Today}" x:Name="calendar_ld" HorizontalAlignment="Left" Margin="400,140,0,0" VerticalAlignment="Top">
+            <DatePicker.Resources>
+                <Style TargetType="DatePickerTextBox">
+                    <Setter Property="IsReadOnly" Value="True"/>
+                </Style>
+            </DatePicker.Resources>
+        </DatePicker>
 
     </Grid>
 </Page>
