--- a/pages/customer/AccueilCustomer.xaml
+++ b/pages/customer/AccueilCustomer.xaml
@@ -11,6 +11,7 @@
     <Grid>
         <TextBlock HorizontalAlignment="Center" Margin="0,94,0,0" TextWrapping="Wrap" Text="Bienvenue cher client" VerticalAlignment="Top" FontSize="36"/>
         <Label Content="" Foreground="Red" x:Name="label_accueil" HorizontalAlignment="Left" Margin="61,183,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <Label Content="Label" HorizontalAlignment="Center" Margin="0,260,0,0" VerticalAlignment="Top" x:Name="Test"/>
 
     </Grid>
 </Page>
