--- a/pages/customer/SeeBookings.xaml
+++ b/pages/customer/SeeBookings.xaml
@@ -10,11 +10,11 @@
 
     <Grid>
         <Label Content="Liste de vos reservations :" HorizontalAlignment="Left" Margin="47,49,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold"/>
-        <DataGrid AutoGenerateColumns="False" Margin="67,132,63,54" x:Name="dg">
+        <DataGrid AutoGenerateColumns="False" Margin="67,132,63,54" x:Name="dg" ItemsSource="{Binding Source=Bookings}">
             <DataGrid.Columns>
-                <DataGridTextColumn IsReadOnly="True" Binding="{Binding Name}" Header="Nom" Width="*"/>
-                <DataGridTextColumn IsReadOnly="True" Binding="{Binding Console}" Header="Console" Width="*"/>
-                <DataGridTextColumn IsReadOnly="True" Binding="{Binding BookingDate}" Header="Date reservation" Width="*"/>
+                <DataGridTextColumn IsReadOnly="True" Binding="{Binding Videogame.Name}" Header="Nom" Width="*"/>
+                <DataGridTextColumn IsReadOnly="True" Binding="{Binding Videogame.Console}" Header="Console" Width="*"/>
+                <DataGridTextColumn IsReadOnly="True" Binding="{Binding BookingDate, StringFormat='dd/MM/yyyy'}" Header="Date reservation" Width="*"/>
             </DataGrid.Columns>
         </DataGrid>
         <Button Content="RETOUR" HorizontalAlignment="Left" Margin="508,70,0,0" VerticalAlignment="Top" Width="62" Click="Button_Click"/>
