--- a/pages/customer/SeeBookings.xaml
+++ b/pages/customer/SeeBookings.xaml
@@ -18,5 +18,6 @@
             </DataGrid.Columns>
         </DataGrid>
         <Button Content="RETOUR" HorizontalAlignment="Left" Margin="508,70,0,0" VerticalAlignment="Top" Width="62" Click="Button_Click"/>
+        <Label Content="Label" x:Name="test" HorizontalAlignment="Left" Margin="130,96,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Page>
