--- a/pages/customer/LoansHistory.xaml
+++ b/pages/customer/LoansHistory.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Localtion_JV.pages.customer.SeeLoans"
+﻿<Page x:Class="Localtion_JV.pages.customer.LoansHistory"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:Localtion_JV.pages.customer"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="SeeLoans" Background="White">
+      Title="LoansHistory" Background="White">
 
     <Grid>
         <Label Content="Liste de vos Locations :" HorizontalAlignment="Left" Margin="47,49,0,0" VerticalAlignment="Top" FontSize="24" FontWeight="Bold"/>
@@ -27,6 +27,5 @@
         </DataGrid>
         <Button Content="RETOUR" HorizontalAlignment="Left" Margin="620,60,0,0" VerticalAlignment="Top" Width="62" Click="Button_Click" RenderTransformOrigin="2.2,-0.11"/>
         <Label Content="Label" x:Name="test" HorizontalAlignment="Left" Margin="65,91,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.347,-0.069"/>
-        <Button Content="RESERVATION" HorizontalAlignment="Left" Margin="470,60,0,0" VerticalAlignment="Top" Width="108" Click="Button_Click_1"/>
     </Grid>
 </Page>
