--- a/Accueil.xaml
+++ b/Accueil.xaml
@@ -9,7 +9,7 @@
       Title="Accueil" Background="White">
       
     <Grid>
-        <TextBlock HorizontalAlignment="Left" Margin="59,66,0,0" TextWrapping="Wrap" Text="Bienvenue dans ce site de location de jeux vidéo" VerticalAlignment="Top" FontSize="36" Width="526"/>
+        <TextBlock HorizontalAlignment="Left" Margin="59,66,0,0" TextWrapping="Wrap" Text="Bienvenue sur votre application de location de jeux vidéo" VerticalAlignment="Top" FontSize="36" Width="478" Height="159"/>
         <Image Source="/accueil.png" HorizontalAlignment="Left" Height="135" Margin="537,46,0,0" VerticalAlignment="Top" Width="172"/>
 
     </Grid>
