--- a/pages/admin/AccueilAdmin.xaml
+++ b/pages/admin/AccueilAdmin.xaml
@@ -9,7 +9,8 @@
       Title="AccueilAdmin" Background="White">
 
     <Grid>
-        <Label Content="Bienvenue Admin" HorizontalAlignment="Center" Margin="0,167,0,0" VerticalAlignment="Top" FontSize="36"/>
+        <Label Content="Bienvenue cher administrateur" HorizontalAlignment="Center" Margin="0,167,0,0" VerticalAlignment="Top" FontSize="36"/>
+        <Image Source="/images/admin.png" Margin="165,230,165,60" />
 
     </Grid>
 </Page>
