--- a/pages/customer/AccueilCustomer.xaml
+++ b/pages/customer/AccueilCustomer.xaml
@@ -9,8 +9,10 @@
       Title="AccueilCustomer" Background="White">
 
     <Grid>
-        <TextBlock HorizontalAlignment="Center" Margin="0,94,0,0" TextWrapping="Wrap" Text="Bienvenue cher client" VerticalAlignment="Top" FontSize="36"/>
-        <Label Content="" Foreground="Red" x:Name="label_accueil" HorizontalAlignment="Left" Margin="61,183,0,0" VerticalAlignment="Top" FontSize="24"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,94,0,0" TextWrapping="Wrap" Text="Bienvenue cher joueur" VerticalAlignment="Top" FontSize="36"/>
+        <Image Source="/images/gamer.png" Width="150" Margin="325,147,325,119" />
+
+        <Label Content="" Foreground="Red" x:Name="label_accueil" HorizontalAlignment="Left" Margin="45,369,0,0" VerticalAlignment="Top" FontSize="24"/>
 
     </Grid>
 </Page>
